feat:添加发布脚本

--- a/oh-package.json5
+++ b/oh-package.json5
@@ -12,8 +12,8 @@
     "name": "余邦锦",
     "email": "15179861454@163.com"
   },
-  "homepage": "https://gitee.com/yubangjin",
-  "repository": "https://gitee.com/yubangjin",
+  "homepage": "https://gitee.com/harmony-free/loading",
+  "repository": "https://gitee.com/harmony-free/loading",
   "license": "MIT",
   "modelVersion": "5.0.0",
   "dependencies": {}
