--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,7 +1,7 @@
 {
   "name": "@free/loading",
   "version": "1.0.1",
-  "description": "这是一个加载框，可以在任意页面使用这个弹窗，可以通过调整传入的参数改变加载的状态。",
+  "description": "这是轻量级一个加载框，可以在任意页面使用这个弹窗，可以通过调整传入的参数改变加载的状态。",
   "keywords": [
     "tools",
     "loading",
