fix:修改主页入口

--- a/oh-package.json5
+++ b/oh-package.json5
@@ -12,7 +12,7 @@
     "name": "余邦锦",
     "email": "15179861454@163.com"
   },
-  "homepage": "https://gitee.com/harmony-free/loading",
+  "homepage": "https://gitee.com/harmony-free",
   "repository": "https://gitee.com/harmony-free/loading",
   "license": "MIT",
   "modelVersion": "5.0.0",
