fix:change readme

--- a/src/main/module.json5
+++ b/src/main/module.json5
@@ -1,12 +1,13 @@
 {
-  "module": {
-    "name": "loading",
-    "type": "har",
-    "deviceTypes": [
-      "default",
-      "tablet",
-      "2in1",
-      "car"
-    ]
-  }
+	"module": {
+		"name": "loading",
+		"type": "har",
+		"deviceTypes": [
+			"default",
+			"tablet",
+			"2in1",
+			"car"
+		],
+		"routerMap": "$profile:route_map"
+	}
 }
